# ChangeLog for app-admin/evtxtools
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/evtxtools/ChangeLog,v 1.12 2013/08/19 20:28:07 zlogene Exp $

*evtxtools-1.1.1-r1 (19 Aug 2013)

  19 Aug 2013; Mikle Kolyada <zlogene@gentoo.org> +evtxtools-1.1.1-r1.ebuild:
  revbump: EAPI=5

  09 Jun 2013; Mikle Kolyada <zlogene@gentoo.org> metadata.xml:
  Reassigning due to Zlogene became Gentoo developer, remove proxy maintainers
  herd and maksbotan

  09 Jun 2013; Mikle Kolyada <zlogene@gentoo.org> evtxtools-1.1.0.ebuild,
  evtxtools-1.1.1.ebuild:
  add missing DEPEND: app-arch/unzip

  28 May 2013; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
  Assign new maintainer

  22 Jan 2013; Agostino Sarubbo <ago@gentoo.org> evtxtools-1.1.1.ebuild:
  Stable for x86, wrt bug #451696

  15 Jan 2013; Agostino Sarubbo <ago@gentoo.org> evtxtools-1.1.1.ebuild:
  Stable for amd64, wrt bug #451696

  24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> evtxtools-1.1.0.ebuild:
  x86 stable wrt bug #405625

  25 Feb 2012; Agostino Sarubbo <ago@gentoo.org> evtxtools-1.1.0.ebuild:
  Stable for amd64, wrt bug #405625

*evtxtools-1.1.1 (24 Feb 2012)

  24 Feb 2012; Maxim Koltsov <maksbotan@gentoo.org> +evtxtools-1.1.1.ebuild,
  -evtxtools-1.0.8.ebuild:
  Bump to 1.1.1, bug #405629. Thanks to slepnoga

  04 Feb 2012; Maxim Koltsov <maksbotan@gentoo.org> metadata.xml:
  Fix maintainer's email in metadata

*evtxtools-1.1.0 (26 Nov 2011)

  26 Nov 2011; Maxim Koltsov <maksbotan@gentoo.org> +evtxtools-1.1.0.ebuild,
  metadata.xml:
  Bumped to 1.1.0. Thanks to slepnoga

*evtxtools-1.0.8 (30 Oct 2011)

  30 Oct 2011; Maxim Koltsov <maksbotan@gentoo.org> +evtxtools-1.0.8.ebuild,
  +metadata.xml:
  Add app-admin/evtctools-1.0.8, thanks to slepnoga