@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/evtxtools/evtxtools-1.1.1-r1.ebuild,v 1.1 2013/08/19 20:28:07 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/evtxtools/evtxtools-1.1.1-r1.ebuild,v 1.2 2013/08/21 09:59:03 zlogene Exp $
 
 EAPI=5
 
@@ -13,7 +13,7 @@ SRC_URI="http://computer.forensikblog.de/files/evtx/${MY_PN}-${PV}.zip"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND="app-arch/unzip
