@@ -3,10 +3,10 @@ DEPEND=app-arch/unzip dev-perl/DateTime dev-perl/Digest-CRC dev-perl/DateTime de
 DESCRIPTION=Read, decode and dump Windows Vista/2008/7 event log file
 EAPI=5
 HOMEPAGE=http://computer.forensikblog.de/en/topics/windows/vista_event_log
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64 x86
 LICENSE=GPL-2
 RDEPEND=app-arch/unzip dev-perl/DateTime dev-perl/Digest-CRC dev-perl/DateTime dev-perl/Carp-Assert dev-perl/Data-Hexify || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] ) || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
 SLOT=0
 SRC_URI=http://computer.forensikblog.de/files/evtx/Parse-Evtx-1.1.1.zip
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	perl-app	20b0a51a72b6d2c8ac53ccab1605737f	perl-module	d93571ca1c77e98760e5aa406388b02d	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=f87eac8b67d6683a81c09ed751790482
+_md5_=e8b0306adf317c8dfd5c6d663aa549de
