@@ -4,7 +4,7 @@ DESCRIPTION=Full sources including the Gentoo patchset for the 3.10 kernel tree
 EAPI=5
 HOMEPAGE=http://dev.gentoo.org/~mpagano/genpatches
 IUSE=deblob symlink build deblob
-KEYWORDS=~alpha ~amd64 ~arm hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+KEYWORDS=alpha ~amd64 arm hppa ia64 ~mips ~ppc ~ppc64 s390 sh ~sparc ~x86
 LICENSE=GPL-2 !deblob? ( freedist )
 PDEPEND=!build? ( virtual/dev-manager )
 RDEPEND=!build? ( >=sys-libs/ncurses-5.2 sys-devel/make dev-lang/perl sys-devel/bc )
@@ -12,4 +12,4 @@ RESTRICT=binchecks strip
 SLOT=3.10.7
 SRC_URI=mirror://kernel/linux/kernel/v3.x/linux-3.10.tar.xz deblob? ( http://www.fsfla.org/svnwiki/selibre/linux-libre//download/releases/LATEST-3.10.N/deblob-3.10 http://www.fsfla.org/svnwiki/selibre/linux-libre//download/releases/LATEST-3.10.N/deblob-check -> deblob-check-3.10 ) mirror://gentoo/genpatches-3.10-13.base.tar.xz mirror://gentoo/genpatches-3.10-13.extras.tar.xz
 _eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	kernel-2	cab6b3a303da6906006f0ece840e3213	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=4400e5ceec2a8b109b0c570ed9e2f1a1
+_md5_=48eb6ce17cb0683fee29947a0b520521
