@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/evtxtools
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/evtxtools/ChangeLog,v 1.12 2013/08/19 20:28:07 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/evtxtools/ChangeLog,v 1.13 2013/08/21 09:59:03 zlogene Exp $
+
+  21 Aug 2013; Mikle Kolyada <zlogene@gentoo.org> evtxtools-1.1.1-r1.ebuild:
+  amd64/x86 stable wrt bug #481746
 
 *evtxtools-1.1.1-r1 (19 Aug 2013)
 
